# gdsc-demo

./: README.md  pyproject.toml
gdsc_demo/: main.py  models.py  schemas.py  setup.db
